<resources>
    <string name="app_name">ColorMyview_UDACITY</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <string name="hot_to_play">How to Play :</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen and butttons</string>
    <string name="button_blue">BLUE</string>
    <string name="button_purple">PURPLE</string>
    <string name="button_brown">BROWN</string>
</resources>
